--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,10 @@ dependencies {
 
     implementation 'com.jakewharton:butterknife:8.8.1' //to bind xml to activity
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.jjoe64:graphview:4.2.2'
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+
+
+
 
 }
